--- a/cabecalho-amarelo-theme.css
+++ b/cabecalho-amarelo-theme.css
@@ -5,7 +5,7 @@
 #theme-header{}
 
 #header {
-	padding: 40px 0 0 0;
+	padding: 45px 0 0 0;
 background-color: #fcdd4e;/*(amarelo-claro)*/
  /* Old browsers */
 	background-color: #f9c404; /*(amarelo-escuro)*/
@@ -48,7 +48,7 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 
 #accessibility {
 	display: block !important;
-	font-size: 0.8em;
+	font-size: 7pt;
 	width: 50%;
 	float: left;
 }
@@ -59,9 +59,9 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 }
 
 #accessibility span {
-	background: #9ed5ab;
-	color: #00500f;
-	padding: 0 4px;
+    background: none repeat scroll 0 0 #497B16;
+    color: #FFFFFF;
+    padding: 0 4px;
 }
 
 
@@ -91,7 +91,7 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 #logo #portal-title {
   margin: 30px 0px 46px 0px;
   color: #03316f;
-  font-size: 3.35em;
+  font-size: 4em;
   font-family: 'Open Sans Extrabold', Arial, Helvetica, sans-serif;
   font-weight: normal;
   line-height: 1em;
