--- a/cabecalho-amarelo-theme.css
+++ b/cabecalho-amarelo-theme.css
@@ -21,7 +21,7 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
  /* IE10+ */
 	background-image: radial-gradient(ellipse at center,  #fcdd4e 1%,#f9c404 100%);
  /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcdd4e', endColorstr='#f9c404',GradientType=1 );
+/*	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcdd4e', endColorstr='#f9c404',GradientType=1 );*/
  /* IE6-9 fallback on horizontal gradient */
 	color: #fff;
 }
@@ -47,10 +47,11 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 }
 
 #accessibility {
-	display: block !important;
-	font-size: 7pt;
-	width: 50%;
-	float: left;
+    display: block !important;
+    float: left;
+    font-family: arial;
+    font-size: 10px;
+    width: 50%;
 }
 
 #accessibility a {
@@ -114,10 +115,10 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 	display: block;
 	float: right;
 	clear: left;
-	border-bottom: 1px dotted #9bc2a3;
+	border-bottom: 1px dotted #00500f;
 	padding-bottom: 2px;
 	margin-top: -15px;
-	font-size: 85%;
+	font-size: 10px;
 	text-align: center;
 }
 
@@ -147,7 +148,7 @@ color: #75ad0a
 #social-icons {
 	float: right;
 	clear: right;
-	margin: 12px 0px 0px 0px;
+	margin: 0px;
 }
 
 #social-icons ul {
@@ -180,6 +181,7 @@ color: #75ad0a
 
 #theme-header #sobre {
     line-height: 20px;
+	 font-size: 12px;
 } 
 /* */
 
@@ -228,7 +230,7 @@ input.searchField {
 	clear: right;
 	float: right;
 	font-size: 80%;
-	margin: 2em 0 1.2em 0;
+	margin: 30px 0 14px;
 	/*margin: 3.12em 0px 3px 0px;*/
 	text-align: right;
 	border-radius: 5px;
