--- a/style.css
+++ b/style.css
@@ -1361,6 +1361,12 @@ input.button.with-text {
     padding-bottom: 11px;
 }
 
+.action-home-index #content .box-1 .container-block-plugin_container-block .block .block-title, 
+.action-environment_design-index #content .box-1 .container-block-plugin_container-block .block .block-title {
+    padding-left: 10px;
+    padding-bottom: 24px;
+}
+
 .action-home-index #content .box-1 .block-title span,
 .action-environment_design-index #content .box-1 .block-title span {
     background-color: #497b16;
@@ -1388,6 +1394,7 @@ input.button.with-text {
 	/*margin: -10px -8px -8px;*/
 	margin: 0;
 }
+
 
 .action-home-index .community-track-plugin_track-card-list-block .block-inner-2,
 .action-environment_design-index .community-track-plugin_track-card-list-block .block-inner-2 {
