--- a/style.css
+++ b/style.css
@@ -497,6 +497,7 @@ p {
     width: 100%;
 	 text-align: center;
 	 margin-bottom: 1em;
+	 margin-right: 0;
 }
 /*.action-home-index #content .container-block-plugin_container-block .display-content-block .image img,
 .action-environment_design-index #content .container-block-plugin_container-block .display-content-block .image img{
