--- a/style.css
+++ b/style.css
@@ -1526,7 +1526,8 @@ input.button.with-text {
 
 .action-home-index .container-block-plugin_container-block .block-inner-2,
 .action-environment_design-index .container-block-plugin_container-block .block-inner-2 {
-  padding: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 
