--- a/style.css
+++ b/style.css
@@ -1533,7 +1533,7 @@ input.button.with-text {
 
 .action-home-index .community-track-plugin_track-card-list-block .block-inner-2,
 .action-environment_design-index .community-track-plugin_track-card-list-block .block-inner-2 {
-	background: url("images/bg-pessoas.jpg") no-repeat scroll center top transparent;
+	background: url("images/bg-bloco-de-trilhas.png") no-repeat scroll center top transparent;
 }
 
 /**/
